@@ -28,7 +28,6 @@ import org.slf4j.Logger;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.OptionalInt;
@@ -185,7 +184,7 @@ public class QuorumState {
                 election.epoch(),
                 partitionState.lastVoterSet().voterIds(),
                 randomElectionTimeoutMs(),
-                Collections.emptyList(),
+                List.of(),
                 localListeners,
                 logContext
             );
@@ -717,7 +716,7 @@ public class QuorumState {
 
         LeaderState<T> state = new LeaderState<>(
             time,
-            ReplicaKey.of(localIdOrThrow(), localDirectoryId),
+            localVoterNodeOrThrow(),
             epoch(),
             epochStartOffset,
             partitionState.lastVoterSet(),
@@ -725,7 +724,6 @@ public class QuorumState {
             partitionState.lastKraftVersion(),
             candidateState.epochElection().grantingVoters(),
             accumulator,
-            localListeners,
             fetchTimeoutMs,
             logContext,
             kafkaRaftMetrics
